# rosbag_controller

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: spawner.h
launch/: rosbag_controller.launch
src/: rosbag_controller_node.cpp  spawner.cpp
